--- a/app.json
+++ b/app.json
@@ -1,8 +1,5 @@
 {
-  "name": "Start on Heroku: Node.js",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"],
-  "image": "heroku/nodejs"
+  "name": "Slack patron OAuth Server",
+  "description": "Slack patron OAuth Server",
+  "repository": "https://github.com/tyage/slack-patron-oauth-server"
 }
