--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@slack/client": "^3.6.0",
     "ejs": "2.4.1",
     "express": "4.13.3"
   },
