--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@slack/web-api": "^6.7.2",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
